--- a/tests/macro/test1.am
+++ b/tests/macro/test1.am
@@ -1,10 +1,1 @@
-MAIN:   add r3, LIST 
-LOOP:   prn #48
-        lea STR, r6
-        
-        cmp r3, #-6
-        bne END 
-        
-
-END:    stop
-LIST:   .data 6, -9, 15
+MAIN:   add r3, LIST              LOOP:   prn #48        lea STR, r6                stop        END:    stopLIST:   .data 6, -9, 15
